# uk_govt_energy_analysis

./: .gitignore  README.md  cleaned_energy_data.csv  downloaded_energy_data.xlsx  energy_analytics.ipynb  last_link.txt  pyproject.toml
