[project]
name = "uk-govt-energy-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Arjun Sekhon",email = "arjunsekhon2@gmail.com"}
]
readme = "README.md"
packages = [{ include = "uk-govt-energy-analysis" }] 
requires-python = ">=3.13"
dependencies = [
    "jupyterlab (>=4.3.5,<5.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "lxml (>=5.3.1,<6.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "tenacity (>=9.0.0,<10.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "numpy (>=2.2.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
